// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSource: Component should render correctly 1`] = `
<Fragment>
  <ProjectTabs
    active="sources"
    url="/project/2"
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Switch>
      <Redirect
        exact={true}
        path="path"
        to="path/source"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/source"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/job"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/preview"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/steps"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/filters/add"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/filters"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/result"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/views"
      />
    </Switch>
  </LoadingWrapper>
</Fragment>
`;

exports[`DataSource: Component should render without rest steps 1`] = `
<Fragment>
  <ProjectTabs
    active="sources"
    url="/project/undefined"
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Switch>
      <Redirect
        exact={true}
        path="path"
        to="path/source"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/source"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/job"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/preview"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/steps"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/filters/add"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/filters"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/result"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/views"
      />
    </Switch>
  </LoadingWrapper>
</Fragment>
`;

exports[`DataSource: Component should render without routing 1`] = `
<Fragment>
  <ProjectTabs
    active="sources"
    url="/project/undefined"
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <Switch>
      <Redirect
        exact={true}
        path="path"
        to="path/source"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/source"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/job"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/preview"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/steps"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/filters/add"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/filters"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/result"
      />
      <Route
        component={[Function]}
        exact={true}
        path="path/views"
      />
    </Switch>
  </LoadingWrapper>
</Fragment>
`;
